[project]
name = "userharbor"
version = "0.3.1"
description = "Framework agnostic user management system for Python applications."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "SpaceShaman", email = "spaceshaman@tuta.io" }]
keywords = [
  "auth",
  "authentication",
  "authorization",
  "login",
  "registration",
  "security",
  "sessions",
  "signup",
  "user-management",
  "users"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dependencies = [
  "pwdlib[argon2]>=0.3.0",
]

[project.urls]
Documentation = "https://userharbor.github.io/userharbor"
Homepage = "https://github.com/userharbor/userharbor"
Repository = "https://github.com/userharbor/userharbor"

[project.optional-dependencies]
all = [
  "userharbor-sqlalchemy>=0.3.0",
  "userharbor-smtp>=0.1.0",
]
smtp = [
  "userharbor-smtp>=0.1.0",
]
sqlalchemy = [
  "userharbor-sqlalchemy>=0.3.0",
]

[dependency-groups]
dev = [
  "pytest>=9.1.0",
  "pytest-cov>=7.1.0",
  "zensical>=0.0.45",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
